--- a/apps/manga/templates/manga/manga/detail.html
+++ b/apps/manga/templates/manga/manga/detail.html
@@ -1,7 +1,8 @@
 {% extends 'manga/manga/list.html' %}
 
 {% block content %}
-    {% for obj in list %}
+    {{manga}}
+    {% for obj in manga.chapter_set.all %}
         {% block content-objs %}
             <a href="{{obj.get_absolute_url}}">
                 {{obj}}
